# MyCLI

./: .gitignore  DEMO_AND_TESTS.md  DEMO_v0.2.0.md  ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY_v0.2.0.md  QUICKSTART.md  README.md  REDESIGN_PROPOSAL.md  SESSION_PRD.md  Seed_Instructions.md  TASK_7_COMPLETE.md  app.py  discovery_results.json  project.memory.json  project.yaml  pyproject.toml  requirements.txt  state.py  styles.tcss  test_actions.py  test_templates.py
.taskmaster/: config.json
.taskmaster/docs/: prd_next_session.txt
.taskmaster/tasks/: tasks.json
C:\Dev\Projects/testcreatedproject/: README.md  Taskfile.yml  (+1 more)
backend/: catalog.py  creator.py  env.py  executor.py  git_ops.py  health.py  loader.py  memory.py  models.py  projects.py  quick_commands.py  system_commands.py  tasks.py  templates.py  xray.py
components/: add_project_modal.py  command_dialog.py  create_modal.py  dashboard.py  edit_memory_modal.py  env_modal.py  footer_bar.py  git_modal.py  header_bar.py  project_list.py  status_bar.py  system_quick_commands_modal.py
docs/: HANDOVER.md  PRD_next_session.md  PRD_v2.md  jules_notes.md
mycli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: discover_repo.py  run_discovered.py
templates/: nextjs-app.yaml  nodejs-api.yaml  python-fastapi.yaml
tests/: conftest.py  test_cli_entry.py  test_creator.py  test_discovery_integration.py  test_executor.py  test_gitinfo.py  test_health.py  test_loader.py  test_quick_commands.py  test_system_commands.py  test_taskfile_plugin.py  test_tasks.py  test_xray.py
(+9 files in other folders)
